fix(style): add z-index to back-to-top button

--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -164,6 +164,7 @@ footer
   right: 1rem
   bottom: 1rem
   overflow: hidden
+  z-index: 2
   .icon
     display: block
     font-size: 2rem
